fix(navigation): adjust z-index in Navigation component

--- a/src/components/Header/components/Navigation/Navigation.css
+++ b/src/components/Header/components/Navigation/Navigation.css
@@ -1,6 +1,7 @@
 .navigation {
   position: relative;
   box-shadow: 0px -1px 0px 0px #ffffff33 inset;
+  z-index: 99;
 }
 
 .navigation__container {
@@ -10,7 +11,6 @@
   align-items: center;
   max-width: 1156px;
   padding: 0 40px;
-  z-index: 99;
 }
 
 .navigation__logo {
@@ -26,7 +26,6 @@
 .navigation__menu {
   height: 100%;
   padding: 19px 0 13px;
-  z-index: 98;
 }
 
 .navigation__menu-list {
@@ -119,7 +118,6 @@
     width: 100%;
     transition: background-color linear 0.3s;
     visibility: hidden;
-    z-index: 98;
   }
 
   .navigation__overlay_active {
@@ -131,6 +129,7 @@
     position: relative;
     padding: 16px 16px;
     box-shadow: 0px -1px 0px 0px #ffffff33 inset;
+    z-index: 99;
   }
 
   .navigation__container_mb_open {
